used LocalStorage to preserve content

--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,7 @@ body {
 .btn-delete {
   position: absolute;
   right: 2.4rem;
-
+  bottom:4rem;
   height: 1.8rem;
   aspect-ratio: 1;
   border-radius: 50%;
